--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /5.0.tar.gz#\dolphin-emu-5.0.tar.gz
 /5.0.tar.gz
 /dolphin-emu-5.0.10474.tar.gz
+/dolphin-emu-5.0.11713.tar.gz
+/dolphin-emu-5.0.11617.tar.gz
