--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /dolphin-emu-5.0.11991.tar.gz
 /dolphin-emu-5.0.12247.tar.gz
 /dolphin-emu-5.0.12716.tar.gz
+/dolphin-emu-5.0.13178.tar.gz
+/dolphin-emu-5.0.13669.tar.gz
