--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 /dolphin-emu-5.0.15920.tar.gz
 /dolphin-emu-5.0.15993.tar.gz
 /dolphin-emu-5.0.16380.tar.gz
+/dolphin-emu-5.0.19793.tar.gz
+/gtest-1.12.1.tar.gz
+/zlib-ng-2.1.3.tar.gz
+/implot-0.14.tar.gz
+/VulkanMemoryAllocator-3.0.1.tar.gz
