--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@
 /zlib-ng-2.1.3.tar.gz
 /implot-0.14.tar.gz
 /VulkanMemoryAllocator-3.0.1.tar.gz
+/implot-0.16.tar.gz
+/dolphin-emu-5.0.20132.tar.gz
+/dolphin-emu-5.0.19870.tar.gz
